--- a/src/app/master/master.component.html
+++ b/src/app/master/master.component.html
@@ -1,1 +1,35 @@
-<p routerLink="/">master works!</p>
+<!-- <div class="container">
+    <h1>
+    </h1>
+    <div class="row">
+      <div class="col-3">
+
+        <input type="number" class="form-control" #name="ngModel" 
+        [class.is.invalid]="name.invalid && name.touched" name="userName" [(ngModel)]="userModel.name"/>
+        <small [class.d-none="name.valid || name.untouched"]>Name is required</small>
+      </div>
+    
+    </div>
+    <div class="row">
+      <div class="col-3">
+
+    <input type="number" class="form-control" [(ngModel)]="num1" />
+    <small>{{errorMessage}}</small>
+  </div>
+
+<div class="col-3">
+  
+  <input type="number" class="form-control" [(ngModel)]="num2" />
+    <p>{{errorMessage}}</p>
+    
+</div>
+</div>
+    <p>The Result is {{result}}</p>
+    <button (click)="convertToInt(num1, num2)">
+      Click Me
+    </button>
+    
+<br>
+ 
+   
+  </div> -->
